applying 61btrfs.diff from Xen tree
Using the file from 1ac81bb7166b79b6555290547d4effff305c74d0 but the
file was introduced in 8c1ba7af046fcd12d1f91ad8506a2f8f9667a7a5 and
modified in fec8577da93f1670103cf07d5e22828d35770bd3.

Signed-off-by: Doug Goldstein <cardoe@cardoe.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -41,6 +41,8 @@ Kristoffer Branemyr added VSTa filesystem support.
 
 Serguei Tzukanov added JFS and XFS support.
 
+Edward Shishkin added Btrfs support.
+
 Jason Thomas added Linux DAC960 support and support for hiding/unhiding
 logical partitions, and did a significant bugfix for the terminal stuff.
 
